turns out I just had dark mode everywhere enabled and there was nothing to fix

--- a/styles.css
+++ b/styles.css
@@ -157,7 +157,7 @@ body {
     border-radius: 8px;
     width: 100px;
     border-style: solid;
-    border-color: white;
+    border-color: #F9FAF8;
     border-width: 2px;
     flex-shrink: 0;
 }
